Version 1.11.0-svn:
 * Campaigns:
   * Son of the Black Eye:
     * Removed Al'Brock and Flar'Tar death as defeat condition in objectives in
       Civil War
   * Tutorial:
     * Fixed bug #19316: Narrator messages are now translated.
   * Under the Burning Suns:
     * Made it so that Kaleh gets the default AMLA after he's been fully
       upgraded
   * Descent into Darkness:
     * Fix most possible cases for Darken Volk becoming "stuck"
       in 09_A_Small_Favor3.
 * Language and i18n:
   * Updated translations: French, Indonesian, Italian, Latin, Norwegian,
     Spanish
 * WML engine:
   * new action tag: [clear_menu_item] id=...
   * new key: [set_menu_item][command]delayed_variable_substitution=yes|no
   * Removed support for the deprecated "colour=", "debug_border_colour=",
     and [colour_adjust]
   * Fixed bug #18996: Increase random number generation range.
 * Miscellaneous and bug fixes:
   * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
     platforms using XDG layout (no compiled-in preferences path override,
     bug #19318)
   * Fixed unit sound animation timings wherever the {SOUND:SLOW} and
     {SOUND:POISON} macros, and several macros from animation-utils2.cfg are used
     (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Display the savegame version when warning the user about unsupported or
     mismatched versions (bug #7243)

Version 1.10.0:
 * Campaigns:
   * Legend of Wesmere:
     * Scenario 03: Fixed bug #19067: Control over Galtrid's side stays with the
       player after the arrival of Kalenz
     * Scenario 22: Fixed bug #19236: Cleodil was missing and no recall list
   * An Orcish Incursion:
     * Scenario 3: select a new unit with the Adviser (sic) role for dialogs if
       the original unit selected at the start of the scenario died
   * Under the Burning Suns:
     * Scenario 5: Fixed bug #19303: one of the dwarves was spawning in a wall.